# bvd

./: Cargo.toml  README.md  doc.md
benches/: bench_check.rs  bench_index.rs  gfa2paf.rs  path2comb.rs  unions.rs
src/: bifurcation_algo.rs  bifurcation_helper.rs  gfa2paf.rs  graph_helper.rs  helper.rs  lib.rs  main.rs  mod.rs  pansv.rs  relation.rs  writer.rs
tests/: cli.rs  main_test.rs
