[package]
name = "bvd"
version = "0.1.0"
authors = ["moinSebi <s.vorbrugg@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
related_intervals = {git = "https://github.com/MoinSebi/nested_intervals"}
clap = "=3.0.0-beta.4"
gfa-reader = {git = "https://github.com/MoinSebi/gfa-reader"}
hashbrown = "0.12"
bifurcation = {git = "https://github.com/MoinSebi/bifurcation"}
crossbeam-channel = "0.5.6"
log = "0.4.0"
env_logger = "0.8.4"
chrono = "0.4"
itertools = "0.10.5"
rand = "0.8.5"
rayon = "1.8.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
criterion = "0.3"

[[bench]]
name = "bench_index"
harness = false

[[bench]]
name = "bench_check"
harness = false

[[bench]]
name = "unions"
harness = false

[[bench]]
name = "path2comb"
harness = false


[[bin]]
name = "bvd"
path = "src/bin/main.rs"


